[tool.poetry]
name = "hexlet-code"
version = "1.0.0"

description = """
Brain Games is a set of five console games inspired by popular mobile apps designed to train your brain. 
Each game poses questions that require correct answers. After three correct answers, the game is considered completed. 
Incorrect answers end the game, and the player is prompted to try again. The games included are:

1. Calculator: Solve arithmetic expressions.
2. Progression: Find the missing number in a sequence.
3. Even Number: Determine if a number is even.
4. Greatest Common Divisor: Identify the greatest common divisor of given numbers.
5. Prime Number: Check if a number is prime.
"""

authors = ["Tulupov Ilya <Tulupov.2712@gmail.com>"]
packages = [
  { include = "brain_games" },
]
readme = "README.md"
repository = "https://github.com/ilya-ship-it/python-project-49"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Natural Language :: Russian",
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"